# botfactory2

./: .env.example  .env.neon  .gitignore  .replit  Dockerfile  Dockerfile.worker  Makefile  README.md  alembic.ini  docker-compose.yml  loyiham.md  pyproject.toml  render.yaml  replit.md  requirements.txt
frontend/static/css/: style.css
frontend/static/js/: app.js
frontend/templates/: analytics.html  base.html  bot_detail.html  bot_new.html  bots.html  dashboard.html  index.html  knowledge.html  login.html  pricing.html  register.html  settings.html
src/: __init__.py  main.py
src/api/: __init__.py  deps.py
src/api/v1/: __init__.py  admin.py  auth.py  bots.py  knowledge.py  payments.py  webhooks.py
src/core/: __init__.py  config.py  exceptions.py  logging.py  security.py
src/db/: __init__.py  base.py  session.py
src/db/migrations/: env.py
src/db/migrations/versions/: a8c066f2493c_initial_tables.py
src/models/: __init__.py  bot.py  chat.py  knowledge.py  payment.py  user.py
src/schemas/: __init__.py  bot.py  chat.py  common.py  knowledge.py  payment.py  user.py
src/services/: __init__.py
src/services/ai/: __init__.py  gemini.py
src/services/bots/: __init__.py  base.py  manager.py  telegram.py
src/services/chat/: __init__.py  service.py
src/services/payments/: __init__.py  base.py  click.py  payme.py
src/tasks/: __init__.py  analytics.py  celery_app.py  cleanup.py  subscription.py
tests/: conftest.py
tests/integration/: test_auth.py  test_bots.py
tests/unit/: test_security.py
